packages/@resist.js/svelte-kit/test/apps/basics/src/routes/errors/load-error-server.svelte
<script context="module">
	/** @type {import('@resistjs/svelte-kit').Load} */
	export async function load() {
		return { status: 555, error: new Error('Not found') };
	}
</script>
